@@ -67,7 +67,21 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 <!--			<scope>compile</scope>-->
+
 		</dependency>
+
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>20.16.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+
 
 
 	</dependencies>
@@ -86,6 +100,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>--add-opens=java.base/java.net=ALL-UNNAMED</argLine>
+						</configuration>
+					</plugin>
 		</plugins>
 	</build>
 
